Fixing some gaps, part II

--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@
 
 /* Video next to chat */
 @media screen and (min-width: 72em) {
-    #main-room .left_section { left: initial; right: 450px; }
+    #main-room .left_section { left: initial; right: 449px; }
     #main-room .left_section #main_player { border-radius: 0; border-bottom-left-radius: 1rem; }
 }
 
@@ -86,7 +86,6 @@ span.close-browser:before { content: "\e903"; }
     height: 100%;
     display: block;
     margin: auto;
-    /*border-radius: 10%;*/
 }
 
 /* Twitch Emotes (DubX) size fixes */
